# server/cmd/main.go
@@ -10,7 +10,6 @@ import (
 	"github.com/shalluv/network/server/internal/infrastructure/database"
 	"github.com/shalluv/network/server/internal/infrastructure/handler/rest"
 	"github.com/shalluv/network/server/internal/service"
-	"github.com/shalluv/network/server/internal/ws"
 
 	_ "github.com/shalluv/network/server/docs"
 	swaggerFiles "github.com/swaggo/files"
@@ -33,14 +32,17 @@ func main() {
 		log.Fatal(err)
 	}
 	profileDB := database.NewProfile(db)
+	groupDB := database.NewGroup(db)
 
-	profileService := service.NewProfile(profileDB)
+	profileService := service.NewProfile(profileDB, groupDB)
+	groupService := service.NewGroup(groupDB)
 
-	profileHandler := rest.NewProfileHandler(profileService)
+	profileHandler := rest.NewProfile(profileService)
+	groupHandler := rest.NewGroup(groupService)
 
-	hub := ws.NewHub()
-	wsHandler := ws.NewHandler(hub)
-	go hub.Run()
+	// hub := ws.NewHub()
+	// wsHandler := ws.NewHandler(hub)
+	// go hub.Run()
 
 	r := gin.Default()
 	r.Use(cors.Default())
@@ -48,14 +50,22 @@ func main() {
 	r.POST("/profiles", profileHandler.UploadProfile)
 	r.GET("/profiles", profileHandler.GetAllProfiles)
 	r.GET("/profiles/:username", profileHandler.GetProfile)
+	r.GET("/profiles/:username/groups", profileHandler.GetUserGroups)
+
+	r.POST("/groups", groupHandler.CreateGroup)
+	r.GET("/groups", groupHandler.GetAllGroups)
+	r.POST("/groups/:group_id", groupHandler.JoinGroup)
+	r.GET("/groups/:group_id/members", groupHandler.GetGroupMembers)
+	r.DELETE("/groups/:group_id/members/:username", groupHandler.LeaveGroup)
+
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
-	r.POST("/ws/group", wsHandler.CreateGroup)
-	r.GET("/ws/group/:groupId", wsHandler.JoinGroup)
-	r.GET("/ws/groups", wsHandler.GetGroups)
-	r.GET("/ws/clients/:groupId", wsHandler.GetClients)
-	r.GET("/ws/users/:username/groups", wsHandler.GetGroupByUsername)
-	r.DELETE("/ws/deleteGroup/:groupId", wsHandler.DeleteGroup)
+	// r.POST("/ws/group", wsHandler.CreateGroup)
+	// r.GET("/ws/group/:groupId", wsHandler.JoinGroup)
+	// r.GET("/ws/groups", wsHandler.GetGroups)
+	// r.GET("/ws/clients/:groupId", wsHandler.GetClients)
+	// r.GET("/ws/users/:username/groups", wsHandler.GetGroupByUsername)
+	// r.DELETE("/ws/deleteGroup/:groupId", wsHandler.DeleteGroup)
 
 	r.Run(fmt.Sprintf(":%d", config.Port))
 }
